--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "pc": "npx prettier --check .",
     "pw": "npx prettier --write .",
     "sl": "npx stylelint \"**/*.css\"",
+    "es": "npx eslint \"**/*.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
